dmz-talos/redlib/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redlib-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`redlib.durp.info`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: authentik-proxy-provider
          namespace: traefik
      services:
        - name: redlib
          port: 8080
  tls:
    secretName: redlib-tls

---
kind: Service
apiVersion: v1
metadata:
  name: redlib-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: redlib.durp.info
spec:
  type: ExternalName
  externalName: durp.info
